# cstream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  authorization.cpp  authorization.hpp  scope.hpp  test.cpp
tests/: credentials.example.hpp  test.cpp
